--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,20 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HomeActivity"
+    tools:context="com.example.asus.coffeeready.HomeActivity"
     android:orientation="vertical">
-    <!--<GridView-->
-        <!--android:id="@+id/grid_view"-->
-        <!--android:layout_width="fill_parent"-->
-        <!--android:layout_height="fill_parent"-->
-        <!--android:numColumns="auto_fit"-->
-        <!--android:columnWidth="90dp"-->
-        <!--android:horizontalSpacing="10dp"-->
-        <!--android:verticalSpacing="10dp"-->
-        <!--android:gravity="center"-->
-        <!--android:stretchMode="columnWidth">-->
 
-    <!--</GridView>-->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
