--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
-    tools:context=".LogInActivity">
+    tools:context="com.example.asus.coffeeready.LogInActivity">
 
 
     <com.facebook.login.widget.LoginButton
