add role_id to user

--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -11,19 +11,12 @@
 
     <com.facebook.login.widget.LoginButton
         android:id="@+id/login_button"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:onClick="onFacebookLogInButtonClick"
-        android:layout_marginTop="30dp"
-        android:layout_marginBottom="30dp" />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="khantey"
-        android:id="@+id/txt_email"
-        android:textAlignment="center"/>
+        android:layout_centerHorizontal="true"
+        />
 
 
 </LinearLayout>
