--- a/app/src/main/res/layout/activity_coffee_detail.xml
+++ b/app/src/main/res/layout/activity_coffee_detail.xml
@@ -41,7 +41,30 @@
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
         android:text="description" />
-
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="small"
+            android:padding="30dp"
+            android:id="@+id/btn_small"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="medium"
+            android:id="@+id/btn_medium"
+            android:padding="30dp"
+            android:layout_centerInParent="true" />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="big"
+            android:id="@+id/btn_big"
+            android:padding="30dp"
+            android:layout_alignParentRight="true"/>
+    </RelativeLayout>
 
     <Button
         android:id="@+id/button_order"
