--- a/app/src/main/res/layout/activity_coffee_detail.xml
+++ b/app/src/main/res/layout/activity_coffee_detail.xml
@@ -48,6 +48,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="small"
+            android:onClick="onButtonSmallClick"
             android:padding="30dp"
             android:id="@+id/btn_small"/>
         <Button
@@ -55,6 +56,7 @@
             android:layout_height="wrap_content"
             android:text="medium"
             android:id="@+id/btn_medium"
+            android:onClick="onButtonMediumClick"
             android:padding="30dp"
             android:layout_centerInParent="true" />
         <Button
@@ -62,6 +64,7 @@
             android:layout_height="wrap_content"
             android:text="big"
             android:id="@+id/btn_big"
+            android:onClick="onButtonBigClick"
             android:padding="30dp"
             android:layout_alignParentRight="true"/>
     </RelativeLayout>
